--- a/terse/data/terse-JSMol.html
+++ b/terse/data/terse-JSMol.html
@@ -1,7 +1,7 @@
 <HTML>
     <HEAD>
         <TITLE>
-            Terse results of electronic structure calculations
+            Terse visual summary of the electronic structure calculation results
         </TITLE>
         <META http-equiv="Content-Type" content="text/html; Charset=UTF-8">
 		<META http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
